syntax = "proto3";
package protomsg;
import "msg_common.proto";



// ---------------------------------客户端协议--------------------------------- //
// 所有装备通知
message MsgGS2CLAllEquipmentNotice
{
    repeated EquipmentInfo equipments   = 1;
}

// 单个装备通知
message MsgGS2CLEquipmentNotice
{
    EquipmentInfo equipment = 1;
}

// 新增装备通知
message MsgGS2CLAddEquipmentsNotice
{
    repeated EquipmentInfo equipments   = 1;    // 仅包含新增的
}

// 移除装备通知
message MsgGS2CLRemoveEquipmentsNotice
{
    repeated uint32 ids = 1;    // 移除的装备的动态id
}

// 穿戴装备请求
message MsgCL2GSWearEquipmentRequest
{
    uint32 hero_id  = 1;
    uint32 id       = 2;    // 装备动态id;
}

// 穿戴装备响应
message MsgGS2CLWearEquipmentReply
{
    uint32 hero_id      = 1;
    uint32 id           = 2;
    int32 error_code    = 99;
}

// 脱下装备请求
message MsgCL2GSTakeOffEquipmentRequest
{
    uint32 hero_id  = 1;
    uint32 id       = 2;    // 装备动态id;
}

// 脱下装备响应
message MsgGS2CLTakeOffEquipmentReply
{
    uint32 hero_id      = 1;
    uint32 id           = 2;
    int32 error_code    = 99;
}

// 装备进阶请求
message MsgCL2GSUpRankEquipmentRequest
{
    uint32 id   = 2;    // 装备动态id;
}

// 装备进阶响应
message MsgGS2CLUpRankEquipmentReply
{
    uint32 id           = 2;
    int32 error_code    = 99;
}

// 装备分解请求
message MsgCL2GSEquipmentDecomposeRequest
{
    uint32 id   = 2;    // 装备动态id;
}

// 装备分解响应
message MsgGS2CLEquipmentDecomposeReply
{
    EquipmentInfo equipment = 1;
    int32 error_code        = 99;
}

// 材料合成请求
message MsgCL2GSMaterialCompositeRequest
{
    uint32 item_id  = 1;    // 材料id;
    uint32 count    = 2;
}

// 材料合成响应
message MsgGS2CLMaterialCompositeReply
{
    uint32 item_id      = 1;    // 材料id;
    uint32 count        = 2;
    int32 error_code    = 99;
}

// 材料分解请求
message MsgCL2GSMaterialDecomposeRequest
{
    uint32 item_id  = 1;    // 材料id;
    uint32 count    = 2;
}

// 材料分解响应
message MsgGS2CLMaterialDecomposeReply
{
    uint32 item_id      = 1;    // 材料id;
    uint32 count        = 2;
    int32 error_code    = 99;
}

message MaterialItem
{
    uint32 item_id  = 1;    // 材料id;
    uint32 count    = 2;
}

// 快捷进阶装备请求
message MsgCL2GSFastUpRankEquipmentRequest
{
    repeated MaterialItem materials = 1;    // 材料
    uint32 id                       = 2;    // 装备动态id
}

// 快捷进阶装备响应
message MsgGS2CLFastUpRankEquipmentReply
{
    uint32 id           = 1;    // 装备动态id
    int32 error_code    = 99;
}

// 兑换装备请求
message MsgCL2GSEquipmentExchangeRequest
{
    uint32 equipment_id = 1;    // 装备id
}

// 兑换装备响应
message MsgGS2CLEquipmentExchangeReply
{
    uint32 equipment_id = 1;    // 装备id
    int32 error_code    = 99;
}

message StrengthenInfo
{
    repeated ItemInfo item_infos     = 1;
    repeated uint32 ids    = 2;
}

// 强化装备或者一键强化
message MsgCL2GSStrengthenEquipmentRequest
{
    uint32 id           = 1;    // 装备动态id
    StrengthenInfo strenthen_info   = 2;    // 强化的材料和装备
}

message MsgGSS2CLtrengthenEquipmentReply
{
    uint32 id           = 1;    // 装备动态id
    uint32 error_code = 99;
}

// 精炼装备
message MsgCL2GSRefiningEquipmentRequest
{
    repeated uint32 ids = 1; // 精炼消耗装备
    uint32 id = 2; // 需要精炼装备
}

message MsgGS2CLRefiningEquipmentReply
{
    uint32 id = 1; // 需要精炼装备
    uint32 error_code = 99;
}
